final submission fundamental 80 percent

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.GithubUser_"
         tools:targetApi="31">
         <activity
+            android:name=".ui.SplashScreen"
+            android:exported="false" />
+        <activity
             android:name=".ui.FavoriteActivity"
             android:exported="false" />
         <activity
